# mathnotes

./: .gitignore  biblio.bib  biblio.tex  handbook.tex  pyproject.toml  readme.md
scripts/: p_value_uniform.py
theory/: handbook.tex
theory/data_science/: introduce.tex
theory/statistica/: ab_tests.tex  bootstrap.tex
theory/time_series/: time_series.tex
